--- a/overview.mdx
+++ b/overview.mdx
@@ -4,6 +4,11 @@ description: 'Welcome to the Chakra Documentation Hub!'
 icon: 'dharmachakra'
 ---
 
+<Note>
+  Chakra is currently in Testnet! Join our
+  [Discord](https://discord.gg/chakra-ai) or follow us on
+  [X](https://x.com/chakra_ai) to stay up to date with the latest developments.
+</Note>
 <img
   className='block dark:hidden'
   src='/images/hero-light.svg'
@@ -17,32 +22,41 @@ icon: 'dharmachakra'
 
 ## Mission
 
-Chakra is building the **Modular World Computer for Data**. We believe in a few things:
+Chakra is building the **Modular World Computer for Data**.
 
-1. There are **&lt;10 datasets in the world that drive the vast majority of value** towards AI use-cases.
-2. Most of these datasets sit in the hands of **users who ultimately provide all the value** to these datasets but reap none of the rewards.
-3. Enterprises building with AI want access to these key datasets and need a simpler way **to procure and integrate** them into their workflows.
+_We believe in a few things:_
 
-Chakra is on a mission to provide the interface for the most important structured datasets in the world.
+1. There are **&lt;10 datasets in the world that drive the vast majority of value** towards traditional analytics and AI use-cases.
+2. Most of these datasets sit in the hands of **users who ultimately provide all the value** but reap none of the rewards.
+3. Enterprises building with AI need access to these key datasets and should have a simpler way **to procure and integrate** them into their workflows.
+
+Chakra is on a mission to **provide the interface for the most important structured datasets in the world**.
 
 ## What is Chakra?
 
 Learn more about the problem Chakra is solving and the key benefits of the platform.
 
-## Products
+<CardGroup cols={2}>
+  <Card title='Background & Problem' icon='lightbulb' href='/quickstart'>
+    Understand the key challenges in data accessibility and management that
+    Chakra aims to solve.
+  </Card>
+  <Card title='Benefits' icon='star' href='/development'>
+    Explore the advantages and unique value propositions that Chakra brings to
+    enterprises and users.
+  </Card>
+</CardGroup>
+
+## Product Suite
 
 Learn more about what Chakra is building and how the products connect together.
 
 <CardGroup cols={2}>
-  <Card
-    title='Chakra Data Warehouse'
-    icon='house'
-    href='https://www.chakra.network/'
-  >
+  <Card title='Data Warehouse' icon='house' href='https://www.chakra.network/'>
     The place to ingest, transform, and query your enterprise's key datasets.
   </Card>
   <Card
-    title='Chakra Data Marketplace'
+    title='Data Marketplace'
     icon='code'
     href='https://mintlify.com/docs/api-playground/openapi'
   >
@@ -50,13 +64,14 @@ Learn more about what Chakra is building and how the products connect together.
     warehouse.
   </Card>
   <Card
-    title='Chakra Edge Node'
+    title='Edge Node'
     icon='screwdriver-wrench'
     href='https://mintlify.com/docs/components/accordion'
   >
-    A chrome extension to contribute to the open data marketplace.
+    A Chrome extension to contribute to the open data marketplace.
   </Card>
-  <Card title='Chakra Drive (Hackathon)' icon='files' href='/drive'>
-    A free to use end-to-end encrypted file store on Solana.
+  <Card title='Drive (Hackathon Winner)' icon='files' href='/drive'>
+    A free to use end-to-end encrypted file store on Solana. Placed 3rd in Radar
+    Hackathon.
   </Card>
 </CardGroup>
