--- a/overview.mdx
+++ b/overview.mdx
@@ -37,11 +37,11 @@ Chakra is on a mission to **provide the interface for the most important structu
 Learn more about the problem Chakra is solving and the key benefits of the platform.
 
 <CardGroup cols={2}>
-  <Card title='Background & Problem' icon='lightbulb' href='/quickstart'>
+  <Card title='Background & Problem' icon='lightbulb' href='/background'>
     Understand the key challenges in data accessibility and management that
     Chakra aims to solve.
   </Card>
-  <Card title='Benefits' icon='star' href='/development'>
+  <Card title='Benefits' icon='star' href='/benefits'>
     Explore the advantages and unique value propositions that Chakra brings to
     enterprises and users.
   </Card>
