--- a/background.mdx
+++ b/background.mdx
@@ -58,9 +58,9 @@ A significant ethical and economic challenge exists in how user-generated data i
 
 Traditional data platforms like Snowflake and Databricks present several obstacles for organizations:
 
-- Complex procurement processes for data acquisition, specifically for the datasets that actually matter like Twitter / Reddit.
-- High operational costs for data storage and transformation - Snowflake / Databricks charge 80% product gross margins, spend for most start-ups / SMBs is way too high.
-- Limited monetization opportunities for proprietary datasets. Too hard to share data into the hands of the right, paying customer.
+- Complex procurement processes for data acquisition, specifically for the datasets that actually matter like Twitter / Reddit
+- High operational costs for data storage and transformation - Snowflake / Databricks charge 80% product gross margins, spend for most start-ups / SMBs is way too high
+- Limited monetization opportunities for proprietary datasets. Too hard to share data into the hands of the right, paying customer
 
 # Market Opportunity
 
@@ -68,20 +68,22 @@ The data marketplace landscape is ripe for innovation due to several factors:
 
 ## Technological Evolution
 
-We are finally at the right time to build a data warehouse using blockchain primitives. Notably, you need two things to build an effective data warehouse - storage and compute.
+We are finally at the right time to build a data warehouse using blockchain primitives.
+
+Notably, you need two things to build an effective data warehouse - storage and compute.
 The modern hyperscaler has had both of these primitives since the early 2000s - only over the last 12-18 months have we bootstrapped these primitives in crypto.
 
 The key primitives that enable Chakra's data warehouse are:
 
-| Primitive             | Provider                                                                                                  | Benefits                                                                                                                                                             |
-| --------------------- | --------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Decentralized Storage | [Impossible Cloud](https://www.impossiblecloud.com/) & [Akave (built on Filecoin)](https://www.akave.ai/) | - Up to 80% cost reduction vs. AWS S3<br/>- No egress costs<br/>- Enterprise-grade durability (11 9's)<br/>- Geographic data sovereignty<br/>- Pay-as-you-go pricing |
-| Decentralized Compute | [Akash Network](https://console.akash.network/), AWS (back-up)                                            | - Up to 85% cost savings vs. AWS EC2<br/>- Global compute marketplace<br/>- Automatic failover<br/>- Native container orchestration                                  |
+| Primitive                                                                                                            | Provider                                                                                                  | Benefits                                                                                                                                                             |
+| -------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Decentralized Storage <br/>(specifically a [hot datalake](https://cloud.google.com/learn/what-is-a-data-lake?hl=en)) | [Impossible Cloud](https://www.impossiblecloud.com/) & [Akave (built on Filecoin)](https://www.akave.ai/) | - Up to 80% cost reduction vs. AWS S3<br/>- No egress costs<br/>- Enterprise-grade durability (11 9's)<br/>- Geographic data sovereignty<br/>- Pay-as-you-go pricing |
+| Decentralized Compute                                                                                                | [Akash Network](https://console.akash.network/), AWS (back-up)                                            | - Up to 85% cost savings vs. AWS EC2<br/>- Global compute marketplace<br/>- Automatic failover<br/>- Native container orchestration                                  |
 
-These foundational technologies enable:
+These foundational technologies enable us to provide:
 
-- High-performance storage solutions (Impossible Cloud & Akave)
-- Cost-effective compute capabilities (Akash, which the Chakra Data Warehouse is built upon)
+- High-performance storage solutions
+- Cost-effective compute capabilities
 - Enterprise-grade SLA guarantees
 - Reduced operational costs (up to 70% savings)
 
