--- a/marketplace/introduction.mdx
+++ b/marketplace/introduction.mdx
@@ -1,33 +1,39 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: 'Coming Soon!'
+description: 'The home for the most important datasets in the world'
+icon: 'store'
 ---
 
 <Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
+  Join our [Discord](https://discord.gg/chakra-ai) to stay updated on the
+  marketplace launch and be first in line for early access.
 </Note>
+<img src='/images/cooking.webp' alt='Happy lemonade stand illustration' />
+<p className='text-sm text-center italic'>Let us cook.</p>
 
-## Welcome
+The Chakra Data Marketplace will be the home for the world's most valuable
+datasets, providing:
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+- Direct access to high-value datasets
+- Fair compensation for data creators
+- Streamlined data procurement
+- Enterprise-grade security and compliance
 
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
+## What to Expect
 
-## Authentication
+<CardGroup cols={2}>
+  <Card title='Dataset Discovery' icon='magnifying-glass'>
+    Browse and discover valuable datasets from verified providers
+  </Card>
+  <Card title='Fair Pricing' icon='money-bill'>
+    Transparent pricing and revenue sharing for data creators
+  </Card>
+  <Card title='Easy Integration' icon='plug'>
+    Seamless integration with the Chakra Data Warehouse
+  </Card>
+  <Card title='Enterprise Ready' icon='building'>
+    Built for enterprise compliance and security needs
+  </Card>
+</CardGroup>
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
-
-```json
-"security": [
-  {
-    "bearerAuth": []
-  }
-]
-```
+Check back soon as we continue building the future of data marketplaces. Want early access? Join our [Discord](https://discord.gg/chakra-ai) community.
