--- a/drive/introduction.mdx
+++ b/drive/introduction.mdx
@@ -1,33 +1,58 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: 'Try it out!'
+description: 'Free end-to-end encrypted file storage powered by Solana'
+icon: 'hard-drive'
 ---
 
 <Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
+  Chakra Drive is live! Try it out at
+  [drive.chakra.network](https://drive.chakra.network) or check out the [source
+  code](https://github.com/Chakra-Network/drive).
 </Note>
 
-## Welcome
+## What is Chakra Drive?
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+Chakra Drive is our first public product - a free end-to-end encrypted file storage solution built on Solana.
+The project won 3rd place in the [Radar Hackathon](https://x.com/solana/status/1856355031374802958) and we're super excited to share this as a public good to our community.
 
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
+<iframe
+  width='100%'
+  height='400'
+  src='https://cdn.prod.website-files.com/669de659c0d915d963bf6513%2F671066cbabc19ec4b67fa24b_chakra%20video-transcode.webm'
+  title='Chakra Drive Demo'
+  frameborder='0'
+  allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
+  allowfullscreen
+></iframe>
 
-## Authentication
+### Key Features
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+<CardGroup cols={2}>
+  <Card title='End-to-End Encryption' icon='lock'>
+    Your files are encrypted automatically with Lit Protocol
+  </Card>
+  <Card title='Powered by Solana' icon='bolt'>
+    Fast, low-cost storage leveraging Solana's infrastructure
+  </Card>
+  <Card title='Free to Use' icon='gift'>
+    No cost to store and share your files on Irys (up to 10GBs)
+  </Card>
+  <Card title='Open Source' icon='code'>
+    Fully open source and auditable code
+  </Card>
+</CardGroup>
 
-```json
-"security": [
-  {
-    "bearerAuth": []
-  }
-]
-```
+## Try it Out
+
+<CardGroup cols={2}>
+  <Card title='Live Product' icon='rocket' href='https://drive.chakra.network'>
+    Start using Chakra Drive now - no gas required
+  </Card>
+  <Card
+    title='Source Code'
+    icon='github'
+    href='https://github.com/Chakra-Network/drive'
+  >
+    View the code, contribute, or deploy your own instance
+  </Card>
+</CardGroup>
