--- a/marketplace/introduction.mdx
+++ b/marketplace/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Coming Soon!'
 description: 'The home for the most important datasets in the world'
-icon: 'store'
+icon: 'puzzle-piece'
 ---
 
 <Note>
@@ -29,7 +29,8 @@ datasets, providing:
     Transparent pricing and revenue sharing for data creators
   </Card>
   <Card title='Easy Integration' icon='plug'>
-    Seamless integration with the Chakra Data Warehouse
+    Seamless integration with the Chakra Data Warehouse (and integrations to
+    other data warehouses)
   </Card>
   <Card title='Enterprise Ready' icon='building'>
     Built for enterprise compliance and security needs
