--- a/node/introduction.mdx
+++ b/node/introduction.mdx
@@ -1,33 +1,34 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: 'Coming Soon!'
+description: 'Contribute to the open data marketplace and earn rewards'
+icon: 'puzzle-piece'
 ---
 
 <Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
+  Join our [Discord](https://discord.gg/chakra-ai) to stay updated on the Edge
+  Node launch and be first in line for early access.
 </Note>
+<img src='/images/cooking.webp' alt='Edge Node illustration' />
+<p className='text-sm text-center italic'>Let us cook.</p>
 
-## Welcome
+The Chakra Edge Node will be a Chrome extension that enables fair compensation for data contributions, providing:
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+- Passive income through data contributions
+- Full control over data sharing
+- Clear visibility into data usage
 
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
+## What to Expect
 
-## Authentication
+<CardGroup cols={2}>
+  <Card title='Passive Income' icon='money-bill'>
+    Earn rewards for contributing valuable data to the ecosystem
+  </Card>
+  <Card title='Privacy Controls' icon='shield'>
+    Full ownership and opt-in controls for your data
+  </Card>
+  <Card title='Usage Tracking' icon='chart-line'>
+    Clear visibility into how your data is being used
+  </Card>
+</CardGroup>
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
-
-```json
-"security": [
-  {
-    "bearerAuth": []
-  }
-]
-```
+Check back soon as we continue building the future of fair data contribution. Want early access? Join our [Discord](https://discord.gg/chakra-ai) community.
