--- a/drive/introduction.mdx
+++ b/drive/introduction.mdx
@@ -32,10 +32,10 @@ The project won 3rd place in the [Radar Hackathon](https://x.com/solana/status/1
     Your files are encrypted automatically with Lit Protocol
   </Card>
   <Card title='Powered by Solana' icon='bolt'>
-    Fast, low-cost storage leveraging Solana's infrastructure
+    Fast and low-cost leveraging Solana's infrastructure
   </Card>
   <Card title='Free to Use' icon='gift'>
-    No cost to store and share your files on Irys (up to 10GBs)
+    No cost to store and share your files stored on Irys (up to 10GBs)
   </Card>
   <Card title='Open Source' icon='code'>
     Fully open source and auditable code
