--- a/drive/introduction.mdx
+++ b/drive/introduction.mdx
@@ -28,7 +28,7 @@ The project won 3rd place in the [Radar Hackathon](https://x.com/solana/status/1
 ### Key Features
 
 <CardGroup cols={2}>
-  <Card title='End-to-End Encryption' icon='lock'>
+  <Card title='End-to-End Encryption' icon='lock' href='/drive/encryption'>
     Your files are encrypted automatically with Lit Protocol
   </Card>
   <Card title='Powered by Solana' icon='bolt'>
