add chakra drive bolds

--- a/drive/encryption.mdx
+++ b/drive/encryption.mdx
@@ -8,13 +8,13 @@ icon: 'lock'
 
 # System Overview
 
-The Chakra Drive encryption system employs a sophisticated architecture that prioritizes security through component isolation. By separating encrypted content, encryption keys, and authentication across different components, we ensure that a breach in any single component cannot compromise the entire system.
+The **Chakra Drive encryption system** employs a sophisticated architecture that prioritizes security through component isolation. By separating encrypted content, encryption keys, and authentication across different components, we ensure that a breach in any single component cannot compromise the entire system.
 
 # Core Components
 
 ## Frontend Service
 
-The frontend serves as the central orchestrator of the encryption system. It manages all user interactions and coordinates the flow between different components. This service is responsible for initiating file requests, managing the authentication flow, and handling the final decryption process. The frontend maintains secure communication channels with both Lit Nodes and Irys to ensure data integrity throughout the process.
+The frontend serves as the **central orchestrator** of the encryption system. It manages all user interactions and coordinates the flow between different components. This service is responsible for initiating file requests, managing the authentication flow, and handling the final decryption process. The frontend maintains secure communication channels with both Lit Nodes and Irys to ensure data integrity throughout the process.
 
 ## Lit Node Network
 
@@ -48,7 +48,7 @@ The encryption system follows a carefully orchestrated flow to ensure security a
 
 # Security Architecture
 
-Security is paramount in the Chakra Drive system. We implement multiple layers of protection:
+**Security is paramount** in the Chakra Drive system. We implement multiple layers of protection:
 
 The encryption key management system ensures that keys are always stored in an encrypted format and are never transmitted in plain text. The format for encrypted keys follows a specific structure:
 
