--- a/drive/introduction.mdx
+++ b/drive/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Try it out!'
-description: 'Free end-to-end encrypted file storage powered by Solana'
+description: 'A free end-to-end encrypted file store on Solana'
 icon: 'hard-drive'
 ---
 
@@ -25,6 +25,21 @@ The project won 3rd place in the [Radar Hackathon](https://x.com/solana/status/1
   allowfullscreen
 ></iframe>
 
+## Try it Out
+
+<CardGroup cols={2}>
+  <Card title='Live Product' icon='rocket' href='https://drive.chakra.network'>
+    Start using Chakra Drive now - no gas required
+  </Card>
+  <Card
+    title='Source Code'
+    icon='github'
+    href='https://github.com/Chakra-Network/drive'
+  >
+    View the code, contribute, or deploy your own instance
+  </Card>
+</CardGroup>
+
 ### Key Features
 
 <CardGroup cols={2}>
@@ -39,20 +54,5 @@ The project won 3rd place in the [Radar Hackathon](https://x.com/solana/status/1
   </Card>
   <Card title='Open Source' icon='code'>
     Fully open source and auditable code
-  </Card>
-</CardGroup>
-
-## Try it Out
-
-<CardGroup cols={2}>
-  <Card title='Live Product' icon='rocket' href='https://drive.chakra.network'>
-    Start using Chakra Drive now - no gas required
-  </Card>
-  <Card
-    title='Source Code'
-    icon='github'
-    href='https://github.com/Chakra-Network/drive'
-  >
-    View the code, contribute, or deploy your own instance
   </Card>
 </CardGroup>
