--- a/drive/introduction.mdx
+++ b/drive/introduction.mdx
@@ -40,7 +40,7 @@ The project won 3rd place in the [Radar Hackathon](https://x.com/solana/status/1
   </Card>
 </CardGroup>
 
-### Key Features
+## Key Features
 
 <CardGroup cols={2}>
   <Card title='End-to-End Encryption' icon='lock' href='/drive/encryption'>
