--- a/drive/encryption.mdx
+++ b/drive/encryption.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Encryption'
-description: 'How do we use Lit Protocol to keep your files safe.'
+description: 'How we use Lit Protocol to keep your files safe.'
 icon: 'lock'
 ---
 
