--- a/benefits.mdx
+++ b/benefits.mdx
@@ -17,7 +17,6 @@ Remember our lemonade stand example? Using Chakra is like upgrading your stand w
   src='/images/lemonade-super-happy.webp'
   alt='Happy lemonade stand illustration'
 />
-<p className='text-sm text-center italic'>H/T Midjourney again.</p>
 
 # For Enterprises
 
@@ -58,7 +57,7 @@ Remember our lemonade stand example? Using Chakra is like upgrading your stand w
 - **Opt-in** privacy controls
 - **Ability** to update or remove data
 
-# For Chrome Extension Users
+# For Edge Node Users
 
 ### Passive Income
 
