--- a/marketplace/introduction.mdx
+++ b/marketplace/introduction.mdx
@@ -9,7 +9,9 @@ icon: 'puzzle-piece'
   marketplace launch and be first in line for early access.
 </Note>
 <img src='/images/cooking.webp' alt='Happy lemonade stand illustration' />
-<p className='text-sm text-center italic'>Let us cook.</p>
+<p className='text-sm text-center italic'>
+  Excuse the lack of detail here - we're cooking on this page.
+</p>
 
 The Chakra Data Marketplace will be the home for the world's most valuable
 datasets, providing:
