--- a/overview.mdx
+++ b/overview.mdx
@@ -52,22 +52,14 @@ Learn more about the problem Chakra is solving and the key benefits of the platf
 Learn more about what Chakra is building and how the products connect together.
 
 <CardGroup cols={2}>
-  <Card title='Data Warehouse' icon='house' href='https://www.chakra.network/'>
+  <Card title='Data Warehouse' icon='house' href='/datawarehouse'>
     The place to ingest, transform, and query your enterprise's key datasets.
   </Card>
-  <Card
-    title='Data Marketplace'
-    icon='code'
-    href='https://mintlify.com/docs/api-playground/openapi'
-  >
+  <Card title='Data Marketplace' icon='code' href='/marketplace'>
     The home for the most important datasets in the world, sitting atop the data
     warehouse.
   </Card>
-  <Card
-    title='Edge Node'
-    icon='screwdriver-wrench'
-    href='https://mintlify.com/docs/components/accordion'
-  >
+  <Card title='Edge Node' icon='screwdriver-wrench' href='/node'>
     A Chrome extension to contribute to the open data marketplace.
   </Card>
   <Card title='Drive (Hackathon Winner)' icon='files' href='/drive'>
