--- a/node/introduction.mdx
+++ b/node/introduction.mdx
@@ -9,7 +9,9 @@ icon: 'puzzle-piece'
   Node launch and be first in line for early access.
 </Note>
 <img src='/images/cooking.webp' alt='Edge Node illustration' />
-<p className='text-sm text-center italic'>Let us cook.</p>
+<p className='text-sm text-center italic'>
+  Excuse the lack of detail here - we're cooking on this page.
+</p>
 
 The Chakra Edge Node will be a Chrome extension that enables fair compensation for data contributions, providing:
 
