fix broken link

--- a/datawarehouse/introduction.mdx
+++ b/datawarehouse/introduction.mdx
@@ -56,7 +56,7 @@ Despite their capabilities, today's data warehouses face **significant challenge
 
 The economics of current data warehouse solutions are increasingly problematic. Snowflake maintains a striking **77% gross margin** on their product, which translates to significant costs for customers. In fact, users typically pay premiums of up to **87%** compared to raw infrastructure costs.
 
-The cost issue has become so significant that an entire ecosystem of startups (like [Keebo.ai](Keebo.ai) and [Bluesky](https://www.getbluesky.io/)) exists solely to help companies optimize their warehouse spending.
+The cost issue has become so significant that an entire ecosystem of startups (like [Keebo.ai](https://keebo.ai/) and [Bluesky](https://www.getbluesky.io/)) exists solely to help companies optimize their warehouse spending.
 
 Companies also face "double-spend" on storage, paying both for their original data location and warehouse storage. In addition to spending on the storage, they also pay to "move" their data resulting in significant ["egress" spend](https://x.com/0xnirmal/status/1845990586597138918).
 
