clean up some language

--- a/overview.mdx
+++ b/overview.mdx
@@ -22,7 +22,7 @@ icon: 'dharmachakra'
 
 ## Mission
 
-Chakra is building the **Modular World Computer for Data**.
+Chakra is building the **World Computer for Structured Data**.
 
 _We believe in a few things:_
 
