remove references to canvases for now

--- a/datawarehouse/introduction.mdx
+++ b/datawarehouse/introduction.mdx
@@ -81,11 +81,8 @@ The challenges with traditional data warehouses point to the need for a new appr
   <Card title='ChakraDB' icon='dharmachakra' href='/datawarehouse/chakra-db'>
     How's it different than the existing solutions?
   </Card>
-  <Card title='Canvas' icon='palette' href='/datawarehouse/canvas'>
-    Start extracting, loading, and transforming your data in minutes.
-  </Card>
   <Card title='Worksheets' icon='table' href='/datawarehouse/worksheet'>
-    Query your data.
+    Load and query your data.
   </Card>
   <Card title='Existing Data' icon='server' href='/datawarehouse/existing-data'>
     Already have data? Load it into Chakra in minutes.
