--- a/datawarehouse/workspace.mdx
+++ b/datawarehouse/workspace.mdx
@@ -38,20 +38,12 @@ Chakra currently supports two roles to keep things simple:
 - Manage users (invite/remove)
 - Change user roles
 - Access all organization resources
-- Full access to databases, integrations, and canvases
+- Full access to databases, integrations, and worksheets
 
 ## Member Role
 
 - Access all organization resources
-- Full access to databases, integrations, and canvases
-
-# Shared Resources
-
-All organization members (both admins and members) have full access to:
-
-- **Databases**: Query, modify, and create databases
-- **Integrations**: Set up and manage data connections
-- **Canvases**: Create and edit data transformation workflows
+- Full access to databases, integrations, and worksheets
 
 <Note>
   We're starting with a simple permissions model to help teams get started
